prevent background tearing on mobile

--- a/theme/style.css
+++ b/theme/style.css
@@ -1,9 +1,3 @@
-body {
-    background: url("assets/background.jpg");
-    background-attachment: fixed;
-    font-family: 'Segoe UI',Tahoma,Geneva,Verdana,sans-serif
-}
-
 @media (min-width: 900px) {
     aside {
         max-width: 15%;
@@ -172,7 +166,10 @@ figcaption {
 }
 
 html {
-    box-sizing: border-box
+    box-sizing: border-box;
+    background: url("assets/background.jpg");
+    background-attachment: fixed;
+    font-family: 'Segoe UI',Tahoma,Geneva,Verdana,sans-serif
 }
 
 *,:before,:after {
